<resources>
    <!--  General  -->
    <string name="app_name">Tripweaver</string>
    <string name="author">Kazymir Rabier</string>

    <!--  Keywords  -->
    <string name="budget">Budget</string>
    <string name="currency">Currency</string>
    <string name="expenses">Expenses</string>
    <string name="info">Information</string>
    <string name="itinerary">Itinerary</string>
    <string name="photos">Photos</string>
    <string name="trips">Trips</string>

    <!--  Menu Items  -->
    <string name="my_trips">My trips</string>
    <string name="achievements">Achievements</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!--  Trip specific  -->
    <string name="title">Title</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <!--  Function Keywords  -->
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <!--  Accessability  -->
    <string name="navigation_drawer_open">Opened navigation drawer</string>
    <string name="navigation_drawer_close">Closed navigation drawer</string>

    <!--  Miscellaneous  -->
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <!--  Content  -->
    <!--  About  -->
    <string name="about_content">Made by Kazymir Rabier</string>

</resources>
