<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/trip_group"
        android:checkableBehavior="single">
        <item
            android:id="@id/nav_trip"
            android:icon="@drawable/ic_round_trip"
            android:title="@string/my_trips" />
    </group>

    <group android:id="@+id/extra_group"
        android:checkableBehavior="single">
        <item
            android:id="@id/nav_achievements"
            android:icon="@drawable/ic_trophy"
            android:title="@string/achievements" />
        <item
            android:id="@id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics" />
    </group>

    <group android:id="@+id/help_group"
        android:checkableBehavior="single">
        <item
            android:id="@id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@id/nav_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/about" />
    </group>

    <group android:id="@+id/DEBUG"
        android:checkableBehavior="single">
        <item
            android:id="@id/nav_debug"
            android:icon="@drawable/ic_settings"
            android:title="Debug" />
    </group>

</menu>